nav-bar finish befor psoudu-clases

--- a/index.html
+++ b/index.html
@@ -47,21 +47,22 @@ Submit button opens email client (mailto link) or shows a confirmation modal
 Map of popular destinations (Google Maps embed) -->
 <section class="conteiner">
     <div class="parent-nav">
-        <div >
+        <div class="left-nav">
             <i class="fa-solid fa-bars"></i>
             <a href="">Menu</a>
         </div>
-        <div>
+        <div class="pages-nav">
             <a href="">About</a>
             <a href="">Pricing</a>
             <a href="">Contact</a>
         </div>
         <div>
-            <div>
+            <div class="right-nav">
                 <i class="fa-solid fa-magnifying-glass"></i>
                 <input type="text" placeholder="Search">
+                <button>Get Started</button>
             </div>
-            <button>Get Started</button>
+            
         </div>
     </div>
     <div></div>
